--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,15 @@
-<h1>Your To Do List</h1>
+<h1>ToDo List</h1>
 
-<%= link_to 'Create New Task', new_task_path %>
-<table border="3" width = "50%" cellpading="4" cellspacing ="3">
+<%= link_to 'New Task', new_task_path %>
+<table>
   <thead>
     <tr>
-      <th >Tasks</th>
-      <th >Category</th>
-      <th >Due date</th>
+      <th>Tasks</th>
+      <th>Category</th>
+      <th>Due date</th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
  
@@ -23,15 +26,15 @@
         <td><%= task.due_date %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
     
-<br>
 
+<br>
 <%= submit_tag("Complete Tasks", :class=>"btn btn-success") %> 
 <% end %> 
-
 
 
