--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
 <%= yield %>
 
-<div id="footer">
-	<br><br><br>
-	<p> V&J&#8482; 2014</p> 
+<div id="footer" >
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<p><font color = "006699"> V&J&#8482; 2014 </font></p> 
 	
 </div>
 
