--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Your To Do List</h1>
+<h1 >Your To Do List</h1>
 
 <%= link_to 'Create New Task', new_task_path %>
 <table border="3" width = "50%" cellpading="4" cellspacing ="3">
@@ -15,14 +15,14 @@
     <% @tasks.each do |task| %>
       <tr>
         <% if task.completed == true %> 
-        <td> <%= check_box_tag "task_checkbox[]",task.id %> <strike><%= task.tasks %></strike></td>
+        <td align="left"> <%= check_box_tag "task_checkbox[]",task.id %> <strike><%= task.tasks %></strike></td>
         <% else %>
-        <td> <%= check_box_tag "task_checkbox[]",task.id %> <%= task.tasks %></td> 
+        <td align="left"> <%= check_box_tag "task_checkbox[]",task.id %> <%= task.tasks %></td> 
         <% end %> 
-        <td><%= task.category %></td>
-        <td><%= task.due_date %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td align="center"><%= task.category %></td>
+        <td align="center"><%= task.due_date %></td>
+        <td align="center"><%= link_to 'Show', task %></td>
+        <td align="center"><%= link_to 'Edit', edit_task_path(task) %></td>
       </tr>
     <% end %>
   </tbody>
