Done with Landing Page

--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -8,10 +8,9 @@
   
   </head> 
 
-
   <body> 
 
-    <p style ="text-align:center;"><font size = "5"> <strong><font color = "#006699 "><font-family: "HelveticaNeue-Light;">Two fine gentlemen, Jaime & Vinch want you to make the most of your life.</font></font></font></strong> </p>
+    <p style ="text-align:center;"><font size = "5"> <strong><font color = "#006699 "><font-family: "HelveticaNeue-Light;"><em>Two fine gentlemen, Jaime & Vinch, want you to make the most of your life.</em></font></font></font></strong> </p>
 
 <ul id="nav">
   <li><u><a href="localhost:3000/help"><font color = "006699">Help</a></font></u></li>
