--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 <%= yield %>
 
 <div id="footer" >
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<p><font color = "006699"> V&J&#8482; 2014 </font></p> 
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<p style ="text-align:center;"><font color = "006699"> V&J&#8482; Vinch Cuevas and Jaime Young 2014 </font></p> 
 	
 </div>
 
