--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
 <div id="footer" >
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<p style ="text-align:center;"><font color = "006699"> V&J&#8482; Vinch Cuevas and Jaime Young 2014 </font></p> 
-	
+	<div class="well" style="background-color: #FFFFFF;">
+	<p style ="text-align:left;"><font color = "000000"> V&J&#8482; 2014 </font></p> 
+	</div>
 </div>
 
 </body>
