--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,9 +1,34 @@
 <html> 
 <head> 
 
+<h1 style ="text-align:center;"><strong><em><font color = "202020 "><font size = "7"> How does it work?  </font></font></em></strong></h1>
+
+<body background="http://25.media.tumblr.com/d35c8d69728629085c74991e265e0ec0/tumblr_myfcnwdiIB1qa42jro1_1280.jpg" /> 
 </head> 
+<ul id="nav">
+  <li><u><a href="localhost:3000/help"><font color = "000000">Help</a></font></u></li>
+  <li><u><a href="#"><font color = "000000">Sign Up</a></font><u></li>
+  <li><u><a href="#"><font color = "000000">Login</a></font></u></li>
+  <li><u><a href="localhost:3000/tasks"><font color = "000000">Your ToDo List</a></font></u></li>
+</ul>
+  </body>
+<br><br>
 
  <body> 
+
+
+ <ul id="nav" > <font color = "F4A460"><font size = "6"><h3 style ="text-align:left;"> Simple Steps to Success </font></font> </h3> 
+ 	<br>
+ 	 
+<div class="well" style="background-color: #000000;">
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4">1. Sign up & Create an Account with V&J to keep track of your personal matters.</font></font></p>
+  <p style ="text-align:left;"> <font color = "F4A460"><font size = "4">2. Create TASKS by clicking the <u>New Task</u> button. </font></font></p>
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 3. Make sure to fill up all the fields to ensure effectivity (i.e Task, Category, Due Date) </font></font></p>
+  <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 4. Once you accomplish a  task, simply check the box assigned to the task, and mark <br>the task as completed by hitting the Complete Task button </font></font></p>
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 5. Head over to localhost:3000/task/completed to review your completed actions<</font></font> </p> 
+  <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 6. Repeat religously for best results </font></font></p> 
+</ul>
+</div>
 
  </body>
 
