--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1 >Your To Do List</h1>
+<h1 style ="text-align:center;"><em>"I do not pray for a lighter load, but rather for a stronger back" - Anonymous </em> </h1>
 
 <%= link_to 'Create New Task', new_task_path %>
 <table border="3" width = "50%" cellpading="4" cellspacing ="3">
