--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,12 @@
-<h1 style ="text-align:center;"><em>"I do not pray for a lighter load, but rather for a stronger back" - Anonymous </em> </h1>
+<body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
 
-<%= link_to 'Create New Task', new_task_path %>
+<h1 style ="text-align:center;"><em> <strong><font color = "F0F8FF"> <u><ul>"I do not pray for a lighter load, but rather for a stronger back"</u></ul> - Anonymous </font>
+</strong>
+</em> </h1>
+
+<ul id="nav"><ul id="nav"><ul id="nav"><ul id="nav">
+
+<font color = "708090"> <%= link_to 'Create New Task', new_task_path %> </font>
 <table border="3" width = "50%" cellpading="4" cellspacing ="3">
   <thead>
     <tr>
@@ -32,6 +38,6 @@
 
 <%= submit_tag("Complete Tasks", :class=>"btn btn-success") %> 
 <% end %> 
-
+</ul></ul></ul></ul>
 
 
