--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing task</h1>
+ <ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" >
+<h1 >Editing task</h1>
+<body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
+
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @task %> |
 <%= link_to 'Back', tasks_path %>
+
+</ul></ul></ul></ul></ul>
