--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,9 @@
+ <ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" >
 <h1>New task</h1>
+<body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
 
 <%= render 'form' %>
 
 <%= link_to 'Back', tasks_path %>
+
+</ul></ul></ul></ul></ul>
