--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,8 @@
+<body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
+
 <p id="notice"><%= notice %></p>
+
+ <ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" >
 
 <p>
   <strong>Tasks:</strong>
@@ -15,5 +19,8 @@
   <%= @task.due_date %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
+
+<font color = "#000000"> <%= link_to 'Edit', edit_task_path(@task) %> |</font>
 <%= link_to 'Back', tasks_path %>
+
+</ul></ul></ul></ul></ul>
