--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -1,23 +1,23 @@
 <html> 
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="localhost:3000/help">Help</a></li>
+  <li><a href="#">SignUp/In</a></li>
+  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+</ul>
+
 
   <head> 
 
-<h1 style ="text-align:center;"><strong><em><font color = "202020 "> Time is a precious commodity </font></em></strong></h1>
+<h1 style ="text-align:center;"><strong><em><font color = "FFFFFF "> Time is a precious commodity </font></em></strong></h1>
 
-<body background="http://24.media.tumblr.com/318dc8ff52d90e671826d53bfa5d14dd/tumblr_mzk1vfihQt1qa42jro1_500.jpg" /> 
+<body background="http://farm4.staticflickr.com/3731/9440041670_99f63d5f44_o.jpg" /> 
   
   </head> 
 
   <body> 
+    <br><br><br>
+    <ul><p style ="text-align:center;"><font size = "5"> <strong><font color = "#FFFFFF "><font-family: "HelveticaNeue-Light;"><em>This is why Vinch & I, two college freshman studying Information Technology Entrepreneurship in the Ateneo want to assist you in making the most out of your life. We hope that our simple and elegant ToDo list app can aid in your productivity -- as well as your sense of motivation.  </em></font></font></font></strong> </p></ul>
 
-    <p style ="text-align:center;"><font size = "5"> <strong><font color = "#006699 "><font-family: "HelveticaNeue-Light;"><em>Two fine gentlemen, Jaime & Vinch, want you to make the most out of your life.</em></font></font></font></strong> </p>
-
-<ul id="nav">
-  <li><u><a href="localhost:3000/help"><font color = "006699">Help</a></font></u></li>
-  <li><u><a href="#"><font color = "006699">Sign Up</a></font><u></li>
-  <li><u><a href="#"><font color = "006699">Login</a></font></u></li>
-  <li><u><a href="localhost:3000/tasks"><font color = "006699">Your ToDo List</a></font></u></li>
-</ul>
-  </body>
 
 </html> 
