--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,34 +1,36 @@
 <html> 
-<head> 
-
-<h1 style ="text-align:center;"><strong><em><font color = "202020 "><font size = "7"> How does it work?  </font></font></em></strong></h1>
-
-<body background="http://25.media.tumblr.com/d35c8d69728629085c74991e265e0ec0/tumblr_myfcnwdiIB1qa42jro1_1280.jpg" /> 
-</head> 
-<ul id="nav">
-  <li><u><a href="localhost:3000/help"><font color = "000000">Help</a></font></u></li>
-  <li><u><a href="#"><font color = "000000">Sign Up</a></font><u></li>
-  <li><u><a href="#"><font color = "000000">Login</a></font></u></li>
-  <li><u><a href="localhost:3000/tasks"><font color = "000000">Your ToDo List</a></font></u></li>
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="localhost:3000/help">Help</a></li>
+  <li><a href="#">SignUp/In</a></li>
+  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
 </ul>
-  </body>
-<br><br>
 
+<br>
+
+<head> 
+<ul><ul><ul><ul>
+<h1 style ="text-align:left;"><strong><em><font color = "ffffff "><font size = "7"> How does it work?  </font></font></em></strong></h1>
+</ul></ul></ul></ul>
+
+<body background="http://3.bp.blogspot.com/-vPqki1zoRS8/UhCc5PrT5vI/AAAAAAAAo5M/xtIU6eWz_jA/s1600/Coffee%2BPhotography%2B5.jpg" /> 
+</head> 
+
+<br><br><br><br><br>
  <body> 
 
- 
-
- <ul id="nav" > <font color = "F4A460"><font size = "6"><h3 style ="text-align:left;"> Simple Steps to Success </font></font> </h3> 
+ <ul> <font color = "F4A460"><font size = "6"><h3 style ="text-align:left;"> Simple Steps to Success </font></font> </h3> 
  	<br>
- <div class="well" style="background-color: #000000;">
-  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4">1. Sign up & Create an Account with V&J to keep track of your personal matters.</font></font></p>
+
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4">1. Sign up & Create an Account with V&J!</font></font></p>
   <p style ="text-align:left;"> <font color = "F4A460"><font size = "4">2. Create TASKS by clicking the <u>New Task</u> button. </font></font></p>
-  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 3. Make sure to fill up all the fields to ensure effectivity (i.e Task, Category, Due Date) </font></font></p>
-  <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 4. Once you accomplish a  task, simply check the box assigned to the task, and mark <br>the task as completed by hitting the Complete Task button </font></font></p>
-  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 5. Head over to localhost:3000/task/completed to review your completed actions<</font></font> </p> 
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 3. Make sure to fill up all the fields to ensure effectivity <br> (i.e Task, Category, Due Date) </font></font></p>
+  <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 4. Once you accomplish a  task, simply check the box <br>assigned to the task, and mark the task as completed <br> by hitting the Complete Task button </font></font></p>
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 5. Head over to localhost:3000/task/completed <br> to review your completed actions<</font></font> </p> 
   <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 6. Repeat religously for best results </font></font></p> 
+
 </ul>
-</div>
+
 
  </body>
 
