--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,12 @@
 
 <div id="footer" >
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<div class="well" style="background-color: #FFFFFF;">
-	<p style ="text-align:left;"><font color = "000000"> V&J&#8482; 2014 </font></p> 
-	</div>
+	
+	<p style ="text-align:left;"><font color = "000000"> <span class="label label-default">V&J&#8482; 2014 </font></span></p> 
+	
 </div>
+
+
 
 </body>
 </html>
