--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,16 @@
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="localhost:3000/help">Help</a></li>
+  <li><a href="#">SignUp/In</a></li>
+  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+</ul>
+
 <body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
+<h1 align="center">  <span class="label label-default">"I do not pray for a lighter load, but rather for a stronger back"</u></ul> - Anonymous</span></h1>
 
-<h1 style ="text-align:center;"><em> <strong><font color = "F0F8FF"> <u><ul>"I do not pray for a lighter load, but rather for a stronger back"</u></ul> - Anonymous </font>
-</strong>
-</em> </h1>
+<br><br>
 
-<ul id="nav"><ul id="nav"><ul id="nav"><ul id="nav">
+<ul><ul><ul><ul>
 
 <font color = "708090"> <%= link_to 'Create New Task', new_task_path %> </font>
 <table border="3" width = "50%" cellpading="4" cellspacing ="3">
@@ -39,5 +45,14 @@
 <%= submit_tag("Complete Tasks", :class=>"btn btn-success") %> 
 <% end %> 
 </ul></ul></ul></ul>
+
+<ul><ul><ul><ul><ul><ul><ul><ul><ul><ul><ul><ul><ul>
+<form class="navbar-form navbar-left" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+</ul></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
 
 
