New Design Edited!

--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -9,7 +9,7 @@
 
   <head> 
 
-<h1 style ="text-align:center;"><strong><em><font color = "FFFFFF "> Time is a precious commodity </font></em></strong></h1>
+<h1 style ="text-align:center;"><strong><em><font color = "FFFFFF ">  <span class="label label-default">Time is a Precious Commodity </span></font></em></strong></h1>
 
 <body background="http://farm4.staticflickr.com/3731/9440041670_99f63d5f44_o.jpg" /> 
   
@@ -17,7 +17,7 @@
 
   <body> 
     <br><br><br><br><br>
-    <ul><p style ="text-align:center;"><font size = "6"> <strong><font color = "#FFFFFF "><font-family: "HelveticaNeue-Light;"><em>This is why Vinch & I, two college freshman studying Information Technology Entrepreneurship in the Ateneo want to assist you in making the most out of your life. We hope that our simple and elegant ToDo list app can aid in your productivity -- as well as your sense of motivation.  </em></font></font></font></strong> </p></ul>
+    <ul><p style ="text-align:center;"><font size = "5"> <strong><font color = "#FFFFFF "><font-family: "HelveticaNeue-Light;"><em>This is why Jaime Young & Vinch Cuevas, two college freshman studying Information Technology Entrepreneurship in the Ateneo want to assist you in making the most out of your life. We hope that our simple and elegant ToDo list app can aid in your productivity -- as well as your sense of motivation.  </em></font></font></font></strong> </p></ul>
 
 
 </html> 
