--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,11 @@
- <ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" ><ul id="nav" >
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="localhost:3000/help">Help</a></li>
+  <li><a href="#">SignUp/In</a></li>
+  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+</ul>
+
+ <ul ><ul><ul><ul ><ul >
 <h1>New task</h1>
 <body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
 
