"Final" Before trying to finish other bonuses

--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -26,7 +26,7 @@
   <p style ="text-align:left;"> <font color = "F4A460"><font size = "4">2. Create TASKS by clicking the <u>New Task</u> button. </font></font></p>
   <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 3. Make sure to fill up all the fields to ensure effectivity <br> (i.e Task, Category, Due Date) </font></font></p>
   <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 4. Once you accomplish a  task, simply check the box <br>assigned to the task, and mark the task as completed <br> by hitting the Complete Task button </font></font></p>
-  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 5. Head over to localhost:3000/task/completed <br> to review your completed actions<</font></font> </p> 
+  <p style ="text-align:left;"> <font color = "FFF5EE"><font size = "4"> 5. Head over to localhost:3000/task/completed <br> to review your completed actions</font></font> </p> 
   <p style ="text-align:left;"> <font color = "F4A460"><font size = "4"> 6. Repeat religously for best results </font></font></p> 
 
 </ul>
