--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="localhost:3000/help">Help</a></li>
+  <li class="active"><a href="/">Home</a></li>
+  <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
   <li><a href="localhost:3000/tasks">Your To Do List</a></li>
 </ul>
