Final for submission
kulang na lang user base and /task/today if ever…. :D

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,9 @@
 <ul class="nav nav-tabs">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="localhost:3000/help">Help</a></li>
+  <li class="active"><a href="/">Home</a></li>
+  <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
-  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+  <li><a href="/tasks">Your To Do List</a></li>
+  <li><a href="/completed">Completed</a></li>
 </ul>
 
  <ul ><ul><ul><ul ><ul >
