--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -1,9 +1,10 @@
 <html> 
 <ul class="nav nav-tabs">
   <li class="active"><a href="#">Home</a></li>
-  <li><a href="localhost:3000/help">Help</a></li>
+  <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
-  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+  <li><a href="/tasks">Your To Do List</a></li>
+  <li><a href="/completed">Completed</a></li>
 </ul>
 
 
