--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -3,7 +3,8 @@
   <li class="active"><a href="/">Home</a></li>
   <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
-  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+  <li><a href="/tasks">Your To Do List</a></li>
+  <li><a href="/completed">Completed</a></li>
 </ul>
 
 <br>
