--- a/app/views/tasks/completed.html.erb
+++ b/app/views/tasks/completed.html.erb
@@ -2,7 +2,8 @@
   <li class="active"><a href="/">Home</a></li>
   <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
-  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+  <li><a href="/tasks">Your To Do List</a></li>
+  <li><a href="/completed">Completed</a></li>
 </ul>
 
 <body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
@@ -50,7 +51,7 @@
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Search">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default">Search</button>
  
 </form>
 </ul></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
