--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,7 +2,8 @@
   <li class="active"><a href="/">Home</a></li>
   <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
-  <li><a href="localhost:3000/tasks">Your To Do List</a></li>
+  <li><a href="/tasks">Your To Do List</a></li>
+  <li><a href="/completed">Completed</a></li>
 </ul>
 
  <ul ><ul><ul ><ul ><ul >
