--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -3,7 +3,7 @@
   <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
   <li><a href="/tasks">Your To Do List</a></li>
-  <li><a href="/completed">Completed</a></li>
+  <li><a href="tasks/completed">Completed</a></li>
 </ul>
 
  <ul ><ul><ul ><ul ><ul >
