--- a/app/views/tasks/completed.html.erb
+++ b/app/views/tasks/completed.html.erb
@@ -3,7 +3,7 @@
   <li><a href="/help">Help</a></li>
   <li><a href="#">SignUp/In</a></li>
   <li><a href="/tasks">Your To Do List</a></li>
-  <li><a href="/completed">Completed</a></li>
+  <li><a href="tasks/completed">Completed</a></li>
 </ul>
 
 <body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
