--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 
 <% if user_signed_in? %>
-            You are currenty signed in as <b><i><%= current_user.name %></b></i>
+        You are currenty signed in as  <%= current_user.name %></b></i>
         <%= link_to "Sign out", logout_path, :method => :delete %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path %>
