--- a/app/views/pages/hello.html.erb
+++ b/app/views/pages/hello.html.erb
@@ -18,7 +18,11 @@
 
   <body> 
     <br><br><br><br><br>
-    <ul><p style ="text-align:center;"><font size = "5"> <strong><font color = "#FFFFFF "><font-family: "HelveticaNeue-Light;"><em>This is why Jaime Young & Vinch Cuevas, two college freshman studying Information Technology Entrepreneurship in the Ateneo want to assist you in making the most out of your life. We hope that our simple and elegant ToDo list app can aid in your productivity -- as well as your sense of motivation.  </em></font></font></font></strong> </p></ul>
+    <ul><p style ="text-align:center;"><font size = "5"> <strong><font color = "#FFFFFF "><font-family: "HelveticaNeue-Light;"><em>This is why Jaime Young & Vinch Cuevas, two college freshman studying Information Technology Entrepreneurship in the Ateneo want to assist you in making the most out of your life. We hope that our simple and elegant ToDo list app can aid in your productivity -- as well as your sense of motivation.
+
+      Hi Sir, if you see this. You are awesome because you taught us how to use Ruby!!!! 
+
+      </em></font></font></font></strong> </p></ul>
 
 
 </html> 
