--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,7 +12,7 @@
 
 <ul><ul><ul><ul>
 
-<font color = "708090"> <%= link_to 'Create New Task', new_task_path %> </font>
+<font color = "708090"> <%= link_to 'Create A New Awesome Task', new_task_path %> </font>
 <table border="3" width = "50%" cellpading="4" cellspacing ="3">
   <thead>
     <tr>
@@ -54,7 +54,7 @@
   <div class="form-group">
     <%= text_field_tag :search %>
   </div>
-  <%= submit_tag "Search", class: "btn btn-default" %>
+  <%= submit_tag "Search Tasks", class: "btn btn-default" %>
 
   <% end %> 
  
