--- a/app/views/tasks/all.html.erb
+++ b/app/views/tasks/all.html.erb
@@ -6,7 +6,7 @@
   <li><a href="tasks/completed">Completed</a></li>
 </ul>
 <body background="http://25.media.tumblr.com/721a9a32e2aa785fed67ca95043ed76b/tumblr_mygb37aq7J1qcj8jbo1_1280.jpg" /> 
-<h1 align="center">  <span class="label label-default">"I do not pray for a lighter load, but rather I pray for a stronger back"</u></ul> - Anonymous</span></h1>
+<h1 align="center">  <span class="label label-default">"I do not pray for a lighter load, but rather I pray for a stronger back."</u></ul> - Anonymous</span></h1>
 
 <br><br>
 
